# dm4z-discord-app

./: .codecov.yml  .dockerignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: docker.yaml  lint.yaml  test.yaml
scripts/: README.md  upload-db.env.example  upload-db.service  upload-db.sh  upload-db.timer
src/: main.py
src/dm4z_bot/: __init__.py  bot.py  config.py
src/dm4z_bot/commands/: age.py  approve.py  guild_config.py  help.py  leaderboard.py  link.py  match_info.py  profile.py  rank.py  stats.py  team_rank.py  tracking.py
src/dm4z_bot/database/: db.py  migrations.py
src/dm4z_bot/events/: __init__.py  guild_events.py  member_events.py  message_handler.py
src/dm4z_bot/services/: aoe2_api.py  aoe2_websocket.py
src/dm4z_bot/tasks/: match_tracker.py  stat_fetcher.py
src/dm4z_bot/utils/: __init__.py  constants.py  match_embeds.py  match_reply.py  mod_notifications.py  regex_patterns.py
tests/: __init__.py  conftest.py
tests/test_bot/: test_bot_runtime.py
tests/test_commands/: test_command_callbacks.py  test_command_setup.py  test_new_command_callbacks.py  test_tracking_callbacks.py
tests/test_database/: test_db.py  test_migrations.py
tests/test_events/: test_guild_events.py  test_member_events.py  test_message_handler.py
tests/test_main/: test_main.py
tests/test_services/: test_aoe2_api.py  test_aoe2_websocket.py
tests/test_services/test_games/: test_aoe2_service.py  (+3 more)
tests/test_tasks/: test_match_tracker.py  test_stat_fetcher.py
tests/test_utils/: test_config.py  test_match_embeds.py  test_match_reply.py  test_mod_notifications.py  test_regex_patterns.py
(+5 files in other folders)
