[package]
name = "dm4z-discord-app"
version = "0.2.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.132"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.12"
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "chrono",
    "collector",
    "interactions_endpoint",
    "builder",
    "framework",
    "standard_framework",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
